--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "module": "nodenext",
+    "module": "esnext",
     "rootDir": "./src",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "bundler",
     "rewriteRelativeImportExtensions": true,
     "resolvePackageJsonExports": true,
     "resolvePackageJsonImports": true,
